err/dvipy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dvipy'...
Compiling './lib/python3.5/site-packages/dvipy/font.py'...
***   File "./lib/python3.5/site-packages/dvipy/font.py", line 120
    print chr(i), j
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dvipy/genstream.py'...
***   File "./lib/python3.5/site-packages/dvipy/genstream.py", line 67
    exec compiled in ns
                ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/dvipy/read.py'...
***   File "./lib/python3.5/site-packages/dvipy/read.py", line 72
    def state(self, (h, v, w, x, y, z)):
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dvipy/stream.py'...
***   File "./lib/python3.5/site-packages/dvipy/stream.py", line 65
    exec compile(func, '<string>', 'exec') in ns
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dvipy/templates'...
Compiling './lib/python3.5/site-packages/dvipy/texparser.py'...
***   File "./lib/python3.5/site-packages/dvipy/texparser.py", line 24
    print whitespace
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dvipy-0.0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
